# petrificus-totalus

./: .gitignore  LICENSE  README.md  pyproject.toml
src/petrificus_totalus/: __init__.py  _registry.py  cli.py  core.py
src/petrificus_totalus/handlers/: __init__.py  docx.py  image.py  office.py  pdf.py  plain_text.py  spreadsheet.py  video.py  writer.py
src/petrificus_totalus/helpers/: spreadsheet_script.py  tempfile.py
tests/: conftest.py  test_cli.py  test_core.py  test_docx_handler.py  test_image_handler.py  test_office_handler.py  test_pdf_handler.py  test_plain_text_handler.py  test_registry.py  test_spreadsheet_handler.py  test_tempfile.py  test_video_handler.py
