[project]
name = "petrificus-totalus"
version = "0.1.0"
description = "Modular content disarm & reconstruction (CDR) library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langdetect>=1.0.9",
    "ocrmypdf>=16.13.0",
    "pillow>=10",
    "pymupdf>=1.28.0",
    "python-magic>=0.4.27",
]

[project.scripts]
petrificus-totalus = "petrificus_totalus.cli:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
